# wordlist-design

./: .cursorrules  .dockerignore  .gitignore  CLAUDE.md  Dockerfile  GOLDEN-BACKUP.md  INTERVIEW_SPEECH.md  Makefile  PIPELINE.md  README.md  TECH_DEBT_AUDIT.md  docker-compose.yml  editor.html  index.html  nginx.conf  pipeline.html  pyproject.toml  schreiben.html  word-card.html
.github/workflows/: pytest.yml
Deutsch Essay Design System/: .thumbnail  SKILL.md  _adherence.oxlintrc.json  _ds_bundle.js  _ds_manifest.json  readme.md  styles.css
Deutsch Essay Design System/guidelines/: brand-brush-palette.html  brand-brushes.html  brand-connector.html  brand-decor.html  colors-accent.html  colors-ink.html  colors-levels.html  colors-surfaces.html  radii.html  shadows.html  spacing-scale.html  type-body.html  type-display.html  type-labels.html  type-reading.html
Deutsch Essay Design System/tokens/: colors.css  fonts.css  spacing.css  typography.css
backend/: .env.example  alembic.ini  audit_db.py  entrypoint.sh  requirements.txt
css/: editor.css  pipeline.css  schreiben.css  site-header.css  styles.css
editor-extract/: README.md
info/: AUDIT.md  CRITICAL-LINKS.md  PLANS.md  README.md  analysis-waiting-phrases-proposal.md  architecture.md  backend-api.md  data-model.md  files.md  frontend.md  graph.md  known-debt.md  pipeline.md
js/: analysis-waiting-phrases.js  animations.js  app.js  editor-api.js  editor.js  enrich.js  pipeline.js  schreiben-api.js  schreiben.js  site-header.js  words-data.js
prototypes/: README.md  _baseline.html  cards-data.js  cards.css  cards.html  cards.js
(+216 files in other folders)
